...
            ('crustaceans', 'Crustaceans',     2),
            ('eggs',    'Eggs',                  3),
            ('fish',    'Fish',                  4),
            ('peanuts', 'Peanuts',               5),
            ('soy',     'Soy',                   6),
            ('milk',    'Milk',                  7),
            ('nuts',    'Tree nuts',             8),
            ('celery',  'Celery',                9),
            ('mustard', 'Mustard',              10),
            ('sesame',  'Sesame',               11),
            ('sulphites', 'Sulphites',          12),
            ('lupin',   'Lupin',                13),
            ('molluscs', 'Molluscs',            14);
...
